crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@op_precedence__mul_div_mod.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/op_precedence/mul_div_mod.pcode
---
Ok:
  actions:
    - ConstantPool:
        - a
        - b
        - c
        - a=
        - ", b="
        - ", c="
        - "----"
        - "a * b / c = "
        - "(a * b) / c = "
        - "---"
        - "a / b * c = "
        - "(a / b) * c = "
        - "a % b * c = "
        - "(a % b) * c = "
        - "a * b % c = "
        - "(a * b) % c = "
        - "a % b / c = "
        - "(a % b) / c = "
        - "a / b % c = "
        - "(a / b) % c = "
        - "Nested: a * b / c * b = "
        - "Nested reference: (((a * b) / c) * b) = "
    - Push:
        - Constant: 0
    - Push:
        - Integer: 20
    - DefineLocal
    - Push:
        - Constant: 1
    - Push:
        - Integer: 6
    - DefineLocal
    - Push:
        - Constant: 2
    - Push:
        - Integer: 4
    - DefineLocal
    - Push:
        - Constant: 3
    - Push:
        - Constant: 0
    - GetVariable
    - Add2
    - Push:
        - Constant: 4
    - Add2
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 5
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 6
    - Trace
    - Push:
        - Constant: 7
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Push:
        - Constant: 2
    - GetVariable
    - Divide
    - Add2
    - Trace
    - Push:
        - Constant: 8
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Push:
        - Constant: 2
    - GetVariable
    - Divide
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 10
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Divide
    - Push:
        - Constant: 2
    - GetVariable
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Divide
    - Push:
        - Constant: 2
    - GetVariable
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 12
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Modulo
    - Push:
        - Constant: 2
    - GetVariable
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 13
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Modulo
    - Push:
        - Constant: 2
    - GetVariable
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 14
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Push:
        - Constant: 2
    - GetVariable
    - Modulo
    - Add2
    - Trace
    - Push:
        - Constant: 15
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Push:
        - Constant: 2
    - GetVariable
    - Modulo
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 16
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Modulo
    - Push:
        - Constant: 2
    - GetVariable
    - Divide
    - Add2
    - Trace
    - Push:
        - Constant: 17
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Modulo
    - Push:
        - Constant: 2
    - GetVariable
    - Divide
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 18
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Divide
    - Push:
        - Constant: 2
    - GetVariable
    - Modulo
    - Add2
    - Trace
    - Push:
        - Constant: 19
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Divide
    - Push:
        - Constant: 2
    - GetVariable
    - Modulo
    - Add2
    - Trace
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 20
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Push:
        - Constant: 2
    - GetVariable
    - Divide
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 21
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Push:
        - Constant: 2
    - GetVariable
    - Divide
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Add2
    - Trace
  label_positions: {}
